<resources>
    <string name="app_name">KQMH</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOG IN</string>
    <string name="username">User name</string>
    <string name="dataEntry">DATA ENTRY</string>
    <string name="spinner_facilityLevel">Facility Level</string>
    <string name="spinner_period">Quarter Period</string>
    <string name="spinner_AssessmentType">Assessment Type</string>
    <string name="spinner_OrganisationUnit">Organisational Unit</string>
    <string name="spinner_dim">KQMH Dimensions</string>
    <string name="spinner_dim11">Dimension 11 : Services</string>
    <string name="spinner_scores">Scores</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="dims">Dimensions</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome to KQMH</string>
    <string name="error_email">Error. Field can not be empty.</string>
    <string name="error_non_empty">Error. Field can not be empty.</string>
    <string name="error_no_password">Enter your password.</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="gender">Gender</string>
    <string name="error_password_matching">Passwords do not match</string>
    <string name="home">Home</string>
    <string name="make_request">Make Request</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="days">Days</string>
    <string name="request">Request</string>
    <string name="Dim1">Leadership</string>
    <string name="Std1.1">1.1 Leadership and Management Responsibilities</string>
    <string name="Std1.1.1">1.1.1 The health facility management shall ensure compliance with regulatory requirements.</string>
    <string name="Rdim1.1.1.1">Facility has a valid licence or is gazetted to offer healthcare services (MOV- Gazette notice /licence)</string>
    <string name="Rdim1.1.1.2">The facility is licensed for provision of laboratory, radiology and other relevant services (MOV- relevant licenses)</string>
    <string name="Std1.1.2">1.1.2 The facility shall have in place governance structures in line with relevant legislation (10)</string>
    <string name="Rdim1.1.2.1">Organogram in place (MOV-Observation)</string>
    <string name="Rdim1.1.2.2">Facility has a management unit constituted as per legislation (MOV-In Public facilities- Gazette notice, list of board membersIn Private facilities- letters of appointment for board members, list of board members)</string>
    <string name="Rdim1.1.2.3">Facility management unit has terms of reference(MOV- TORs available)</string>
    <string name="Std1.1.3">1.1.3 The health facility leadership shall identify and plan for the services it offers</string>
    <string name="Rdim1.1.3.1">Facility has a strategic plan/ business plan (MOV-availability of current plan)</string>
    <string name="Rdim1.1.3.2">Annual work plan with a budget (MOV-availability of current plan)</string>
    <string name="Rdim1.1.3.3">Departmental work plans in place (MOV-availability of current plan)</string>
    <string name="Std1.1.4">1.1.4 The health facility management shall commit to the implementation of the Kenya Quality Model for Health (KQMH) (9)</string>
    <string name="Rdim1.1.4.1">Management allocates resources for implementation of quality improvement initiatives (MOV- report on capacity development of staff on KQMH, budget, staffing)</string>
    <string name="Rdim1.1.4.2">Mission and vision statements are aligned to the county/National health sector"'"s mission and vision (MOV- confirm alignment with Kenya Health Policy)</string>
    <string name="Std1.1.5">1.1.5 The health facility management shall formally create a designated quality improvement team (QIT).</string>
    <string name="Rdim1.1.5.1">Quality improvement team appointed with terms of reference (MOV- HR records)</string>
    <string name="Rdim1.1.5.2">QIT coordinator appointed with terms of reference (MOV-HR records)</string>
    <string name="Rdim1.1.5.3">The Quality Improvement Team (QIT) meets at least once every quarter. (MOV-minutes)</string>
    <string name="Rdim1.1.5.4">All Work Improvement Teams (WITs) meet monthly (MOV-minutes)</string>
    <string name="Std1.1.6">1.1.6 The health facility shall  comply with ethical principles.</string>
    <string name="Rdim1.1.6.1">Documented procedure for administrative consent for undertaking of health interventions and research (MOV-Documented procedure)</string>
    <string name="Rdim1.1.6.2">Documented procedure for monitoring adverse effect of health interventions and research (MOV-Documented procedure)</string>
    <string name="Std1.2">1.2 Management Review and Continuous Improvement</string>
    <string name="Std1.2.1">1.2.1 Management shall continually review the facility operations</string>
    <string name="Rdim1.2.1.1">Facility management team meets on a monthly basis (MOV- Minutes)</string>
    <string name="Rdim1.2.1.2">Facility holds monthly clinical meetings(MOV-Minutes)</string>
    <string name="Rdim1.2.1.3">Quality management review meetings are held on a quarterly basis. (MOV-Minutes)</string>
    <string name="Rdim1.2.1.4">Clear quality improvement agenda for the meetings (to include among others results of self-assessment; Customer satisfaction feedback; Process performance; Status of preventive and corrective actions; Risk management; Follow-up actions from previous management reviews; Recommendations for improvement)(MOV-Minutes for management review meetings)</string>
    <string name="Std1.2.2">1.2.2 Management shall support staff to engage in a continuous quality improvement process.</string>
    <string name="Rdim1.2.2.1">Areas for improvement are identified through biannual quality assessments (MOV- report on identified areas for improvement).</string>
    <string name="Rdim1.2.2.2">Facility Implementation of quality improvement plans (MOV- reports on quality improvement projects)</string>
    <string name="Std1.2.3">1.2.3 The facility shall carry out regular quality review and assessment of the effectiveness of its quality improvement initiatives</string>
    <string name="Rdim1.2.3.1">Self-assessment carried out biannually (MOV- assessment reports)</string>
    <string name="Std1.2.4">1.2.4 The facility shall evaluate benefits of improvement interventions at least once annually and success stories and lessons learnt communicated</string>
    <string name="Rdim1.2.4.1">The facility evaluates benefits of improvement interventions at least once annually (MOV- evaluation report)</string>
    <string name="Rdim1.2.4.2">The facility disseminates success stories and lessons learnt at least once annually. (MOV- minutes/report of dissemination meetings/ brochures/ social media/ internet links )</string>
    <string name="Std1.3">1.3 Risk Management</string>
    <string name="Std1.3.1">1.3.1 The facility has put in place measures to reduce or eliminate clinical risks</string>
    <string name="Rdim1.3.1.1">The facility conducts risk assessment for all clinical services (MOV- risk assessment report)</string>
    <string name="Rdim1.3.1.2">The facility has put in place measures to mitigate the identified risks (MOV- mitigation plan/report)</string>
    <string name="Dim2">Human Resource Management and Development</string>
    <string name="Std2.1">2.1 The health facility is adequately staffed as per the established HRH norms and standards.</string>
    <string name="Rdim2.1.1">Facility is staffed as per established HRH norms (MOV-HR records)</string>
    <string name="Rdim2.1.2">Facility has a documented procedure for task shifting or responsibility sharing between different professional cadres (MOV-documented protocol)</string>
    <string name="Std2.2">2.2 The health facility maintains an updated inventory of all staff.</string>
    <string name="Rdim2.2.1">Facility has an up to date personnel file that contains the following at a minimum: - Registration with relevant professional bodies. (MOV-personnel file with listed documents. Sample 5 files)</string>
    <string name="Rdim2.2.2">Relevant academic certificates (MOV-personnel file with listed documents. Sample 5 files)</string>
    <string name="Rdim2.2.3">Current curriculum vitae (MOV-personnel file with listed documents. Sample 5 files)</string>
    <string name="Rdim2.2.4">Letters of appointment (MOV-personnel file with listed documents. Sample 5 files)</string>
    <string name="Rdim2.2.5">Signed job description (MOV-personnel file with listed documents. Sample 5 files)</string>
    <string name="Std2.3">2.3 The health facility implements staff performance appraisal.</string>
    <string name="Rdim2.3.1">Management staff have signed their annual performance contracts (MOV- HR records for updated performance contracts)</string>
    <string name="Rdim2.3.2">Staff appraised at least once in a year (MOV-personnel file with appraisal documents)</string>
    <string name="Rdim2.3.3">Recommendations of the appraisals implemented by the HR (MOV-documented actions on recommendations)</string>
    <string name="Std2.4">2.4 Facility staff engages in continuous medical education.</string>
    <string name="Rdim2.4.1">Facility implements a continuous medical education programme (MOV- HR records and schedule and file with minutes on CME sessions)</string>
    <string name="Rdim2.4.2">All staff who provide direct patient care have received training in basic cardiopulmonary resuscitation and the training is repeated at least every two years (MOV- HR records)</string>
    <string name="Std2.5">2.5 Facility has staff motivation programme</string>
    <string name="Rdim2.5.1">Facility has a system for recognition and/or rewards of high achievers (MOV-Administration records)</string>
    <string name="Rdim2.5.2">Team building activity carried out at least once per year (MOV-Administration records)</string>
    <string name="Rdim2.5.3">Motivation plan communicated to all staff (MOV- HR records)</string>
    <string name="Std2.6">2.6 There shall be an induction into service programme for all new staff.</string>
    <string name="Rdim2.6.1">There is an induction schedule for all the new staff. Induction to include but not limited to the organizational structure, work area, staff facilities, health and safety requirements and occupational hazards (MOV-documented schedule)</string>
    <string name="Rdim2.6.2">Induction report countersigned by new staff and by the designated staff in the various departments within the health facility (MOV-Induction reports filed in the staff files)</string>
    <string name="Std2.7">2.7 The health facility shall allocate funds for training of staff as informed by capacity needs</string>
    <string name="Rdim2.7.1">Annual training needs assessment conducted and documented (MOV-Training needs assessment for the current calendar or financial year)</string>
    <string name="Rdim2.7.2">Costed training schedule in place (MOV-training schedule)</string>
    <string name="Rdim2.7.3">Budget allocated for training (MOV-administration records)</string>
    <string name="Std2.8">2.8 The health facility has in place a mechanism for knowledge management.</string>
</resources>