<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical">

                <include layout="@layout/header"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_border"
                    app:cardCornerRadius="5dp"
                    card_view:cardElevation="9dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:weightSum="1">

                    </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="5dp"
                                android:padding="10dp"
                                android:text="Organisation Unit:"
                                android:textColor="@color/black"/>

                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginEnd="15dp"
                                android:id="@+id/spinner_OrganisationUnit"
                                android:layout_marginStart="15dp"
                                android:background="@color/white"
                                android:gravity="center_vertical"
                                android:hint="@string/spinner_OrganisationUnit"
                                android:padding="10dp"
                                android:prompt="@string/spinner_OrganisationUnit"
                                android:textSize="12sp" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="5dp"
                                android:padding="10dp"
                                android:text="Assessment Type:"
                                android:textColor="@color/black"/>

                                <Spinner
                                    android:id="@+id/spinner_AssessmentType"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginEnd="15dp"
                                    android:layout_marginStart="15dp"
                                    android:background="@color/white"
                                    android:gravity="center_vertical"
                                    android:hint="@string/spinner_AssessmentType"
                                    android:padding="10dp"
                                    android:prompt="@string/spinner_AssessmentType"
                                    android:textSize="12sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="5dp"
                                android:padding="10dp"
                                android:text="Quarter Period:"
                                android:textColor="@color/black"/>

                                <Spinner
                                    android:id="@+id/spinner_period"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginEnd="15dp"
                                    android:layout_marginStart="15dp"
                                    android:background="@color/white"
                                    android:gravity="center_vertical"
                                    android:hint="@string/spinner_period"
                                    android:padding="10dp"
                                    android:prompt="@string/spinner_period"
                                    android:textSize="12sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="5dp"
                                android:padding="10dp"
                                android:text="Facility Level:"
                                android:textColor="@color/black"/>

                                <Spinner
                                    android:id="@+id/spinner_facilityLevel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginEnd="15dp"
                                    android:layout_marginStart="15dp"
                                    android:background="@color/white"
                                    android:gravity="center_vertical"
                                    android:hint="@string/spinner_facilityLevel"
                                    android:padding="10dp"
                                    android:prompt="@string/spinner_facilityLevel"
                                    android:textSize="12sp" />

                            <Button
                                android:id="@+id/bt_dataEntry"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:background="@color/green"
                                android:onClick="Submit"
                                android:text="@string/dataEntry" />

                        </LinearLayout>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
